<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:text="@string/men"
        android:layout_marginStart="45dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/arrow_for_selection"
        android:layout_width="20dp"
        android:layout_height="13dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintEnd_toEndOf="@id/Title"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="@id/Title"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/title_bar_favorite"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginBottom="36dp"
        android:src="@drawable/ic_menu_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/Title"
        app:layout_constraintEnd_toStartOf="@+id/search_view"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toEndOf="@+id/arrow_for_selection" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="16dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/title_bar"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <TextView
                    android:id="@+id/bar_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/home"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bar_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/category"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bar_new_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/new_in"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bar_for_you"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/for_you"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img1"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img2"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img3"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img4"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img5"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img6"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img7"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img8"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img9"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img10"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img11"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img12"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="132dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/category_img13"/>


        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>